url and resume updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="index.css" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta name="description" content="Personal website of David Christie(Crespoter)">
+        <meta name="keywords" content="Crespoter, crespoter.com, David Christie, Crespoter Graphics Engine, C++, OpenGL, Unreal Engine">
+        <meta name="author" content="David Christie">
         <title>David Christie | Crespoter</title>
+        <link rel = "icon" href = "Resources/Images/Logos/title-bar.png" type = "image/x-icon">
     </head>
     <body>
         <div class = "navbar-fixed">
@@ -110,7 +115,7 @@
                                 <br /> <br /> <br />
                                 <div class ="row">
                                     <a class="waves-effect waves-light btn purple darken-1 col s4" href="#" target="_blank"><i class="material-icons left">info</i>Know More</a>
-                                    <a class="waves-effect waves-light btn blue col s4 offset-s1" href="https://github.com/crespoter/Crespoter-Game-Engine" target="_blank"><i class="material-icons left">code</i>Source Code</a>
+                                    <a class="waves-effect waves-light btn blue col s4 offset-s1" href="https://github.com/crespoter/Crespoter-Graphics-Engine" target="_blank"><i class="material-icons left">code</i>Source Code</a>
                                 </div>
                             </div>
                         </div>
