Updated copyright and about

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
                             <div class="collapsible-header"><i class="material-icons">arrow_drop_down</i>About Me</div>
                             <div class="collapsible-body"><span>
                                 <p>
-                                    My first step into game development was when I was 15 and found the graphics.h library for C++. For a kid who loved video games, I was awestruck and spend most of time making simple 2d games with it.
-                                    I graduated from
-                                    <a href="https://www.iiits.ac.in/">Indian Institute of Information Technology, Sricity</a> with a B.Tech in Computer Science engineering in 2019. While in college, I delved deeper into game development, exploring Unity3D, 
-                                    Unreal Engine and OpenGL. I have come a long way since then
-                                    , and I have a long way to go in achieving what was then a 15 year old's dream.
+                                    My first step into game development was when I was 15 and started making small 2d games using graphics.h library in C++. The ability to make visuals in your mind take life through the pixels on the monitor felt magical then and now. 
+                                    <br /> <br />
+                                    My interest in Computers and game development inspired me to pursue computing technology as a career. I graduated from  <a href="https://www.iiits.ac.in/">Indian Institute of Information Technology, Sricity</a> in 2019 with a bachelor's in Computer Science Engineering.
+                                    While at college, I delved deeper into game development topics and technologies such as Unity3D, Unreal Engine, and OpenGL. <br />
+                                    <br />
+                                    I am passionate about game development and I am constantly learning new topics or working on interesting personal projects, to strive towards what was then a 15-year-old's dream.
                                     <br /> <br />
                                     Like most people in my industry, I love video games and I especially enjoy story driven games that employ human interactions to drive the narrative. I am always excited
                                     to play new games and experience innovative gameplays. In addition, I also appreciate other works of fiction including Movies
@@ -304,7 +305,7 @@
         <footer class="page-footer grey darken-4" style="padding:0">
             <div class="footer-copyright">
               <div class="container">
-              © 2021 David Christie (Crespoter)
+              © 2022 David Christie (Crespoter)
               </div>
             </div>
         </footer>
