--- a/index.html
+++ b/index.html
@@ -93,20 +93,18 @@
                     <div class="col l6 s10">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://static.wixstatic.com/media/414c5f_f71787696e2b45ed9c77f44cf937df5d~mv2.gif" ">
+                                <img src="Resources/Images/Projects/crespoter-graphics-engine-output.jpeg" ">
                             </div>
                             <div class="card-content white-text">
-                                <span class="card-title black-text">Crespoter Graphics Engine</span>
+                                <span class="card-title black-text">Graphics Engine</span>
                                 <br />
-                                <p class = "black-text">A graphics engine made using C++ and OpenGL. It supports the following features:.<br />
+                                <p class = "black-text">A graphics engine made using C++ and OpenGL.<br />
                                     <ul class = "black-text">
-                                        <li><i class="material-icons tiny">check</i> Blinn-Phong Reflection Model</li>
-                                        <li><i class="material-icons tiny">check</i> Directional, Point and Spot Light sources</li>
-                                        <li><i class="material-icons tiny">check</i> Loading 3D models</li>
-                                        <li><i class="material-icons tiny">check</i> Shadows for all light sources</li>
-                                        <li><i class="material-icons tiny">check</i> Cubemaps</li>
-                                        <li><i class="material-icons tiny">check</i> Anti Aliasing</li>
-                                        <li><i class="material-icons tiny">check</i> Gamma Correction</li>
+                                        <li><i class="material-icons tiny">check</i> Blinn-Phong Lighting Model</li>
+                                        <li><i class="material-icons tiny">check</i> Directional and Point light sources</li>
+                                        <li><i class="material-icons tiny">check</i> Loading 3D Wavefront models with textures and materials</li>
+                                        <li><i class="material-icons tiny">check</i> Shadows</li>
+                                        <li><i class="material-icons tiny">check</i> Skybox</li>
                                     </ul>
                                     Technologies Used:
                                 </p>
@@ -115,8 +113,7 @@
                                 <img src = "Resources/Images/Stack/opengl.jfif" class="logo tooltipped" data-position="top" data-tooltip="OpenGL" />
                                 <br /> <br /> <br />
                                 <div class ="row">
-                                    <a class="waves-effect waves-light btn purple darken-1 col s4" href="#" target="_blank"><i class="material-icons left">info</i>Know More</a>
-                                    <a class="waves-effect waves-light btn blue col s4 offset-s1" href="https://github.com/crespoter/Crespoter-Graphics-Engine" target="_blank"><i class="material-icons left">code</i>Source Code</a>
+                                    <a class="waves-effect waves-light btn blue col s4" href="https://github.com/crespoter/Crespoter-Graphics-Engine" target="_blank"><i class="material-icons left">code</i>Source Code</a>
                                 </div>
                             </div>
                         </div>
