--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="nav-wrapper">
                     <ul id="nav-mobile" class="left">
                         <li><a href="#main-page">Home</a></li>
-                        <li><a href="#personal-projects">Personal Projects</a></li>
+                        <li><a href="#personal-projects">Projects</a></li>
                         <li><a href="#formal-info">Formal Info</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -37,14 +37,16 @@
                             <span style="--index: 1;">CRESPOTER</span>
                             <span style="--index: 2;">CRESPOTER</span>
                         </div>
-                        <h1 class="subtitle">GAME | GRAPHICS PROGRAMMER</h1>
+                        <h1 class="subtitle">GAME PROGRAMMER & DESIGNER</h1>
                     </div>
                 </div>
                 <div class = "row">
                     <p class = "intro">
                         Hello There, <span class="general-kenobi">General Kenobi</span><br />
-                        I am David and welcome to my website. I am passionate about game and graphics programming. I am currently working as a software engineer at EA. 
+                        I am David and welcome to my website. I am a game programmer with over 5 years of experience. I am available for freelancing role
+                        for Unreal Engine/C++ projects.
                     </p>
+                    <!--
                     <ul class="collapsible">
                         <li>
                             <div class="collapsible-header"><i class="material-icons">arrow_drop_down</i>About Me</div>
@@ -63,7 +65,7 @@
                                 </p>
                             </span></div>
                         </li>
-                    </ul>
+                    </ul>-->
                     <br /> <br />
                 </div>
                 <center>
@@ -87,7 +89,74 @@
         <div id = "personal-projects" style="margin-top: 10vh;" class="section scrollspy">
             <div class = "container">
                 <div class = "row">
-                    <center><h1>Personal Projects</h1></center>
+                    <center><h1>Projects</h1></center>
+                </div>
+
+
+                
+                <div class="row" style="margin-top: 5vh">
+                    <div class="col l6 s10">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="Resources/Images/Projects/battlefield-mobile.jpg">
+                            </div>
+                            <div class="card-content white-text">
+                                <span class="card-title black-text">Battlefield Mobile</span>
+                                <br />
+                                <p class = "black-text">Mobile Multiplayer Shooter title based on the Battlefield Universe developed using Unreal Engine 5.
+                                    <br />
+                                    I have worked on Gameplay, UI and Animation programming as part of the Tutorials and Prototyping teams during my time working with EA Games.
+                                    <br />
+                                    <br />
+                                    Technologies Used:
+                                </p>
+                                <br />
+                                <img src = "Resources/Images/Stack/cpp-logo.png" class="logo tooltipped" data-position="top" data-tooltip="C++" />
+                                <img src = "Resources/Images/Stack/unreal-engine.png" class="logo tooltipped" data-position="top" data-tooltip="Unreal Engine" />
+                                <img src = "Resources/Images/Stack/perforce-logo.png" class="logo tooltipped" data-position="top" data-tooltip="Perforce" />
+                                <br /> <br /> <br />
+                                <div class ="row">
+                                    <a class="waves-effect waves-light btn blue col s3" href="https://www.youtube.com/watch?v=rTEiJSO5dO8" target="_blank"><i class="material-icons left">info</i>Learn More</a>
+                                </div>
+                                <br />
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col l6 s10">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="Resources/Images/Projects/real-racing-3.jpg">
+                            </div>
+                            <div class="card-content white-text">
+                                <span class="card-title black-text">Real Racing 3</span>
+                                <br />
+                                <p class = "black-text">A car racing simulator featuring over 400 cars and 40 real world circuits. Real racing 3 is one of the best mobile racing games on mobile.<br />
+                                    <br />
+                                    As part of EA Games, I have worked on the updates for Real Racing 3. My work primarily involved UI and Tools programming.
+                                    <br />
+                                    <br />
+                                    Technologies Used:
+                                </p>
+                                <br />
+                                <img src = "Resources/Images/Stack/cpp-logo.png" class="logo tooltipped" data-position="top" data-tooltip="C++" />
+                                <img src = "Resources/Images/Stack/c-sharp.png" class="logo tooltipped" data-position="top" data-tooltip="C#" />
+                                <img src = "Resources/Images/Stack/imgui.png" class="logo tooltipped" data-position="top" data-tooltip="ImGui" />
+                                <img src = "Resources/Images/Stack/svn.png" class="logo tooltipped" data-position="top" data-tooltip="SVN" />
+
+                                <br /> <br /> <br />
+                                <div class ="row">
+                                        <a class="waves-effect waves-light btn blue col s3" href="https://www.ea.com/games/real-racing/real-racing-3" target="_blank">
+                                        <i class="material-icons left">info</i>Learn More
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="row" style="margin-top: 5vh">
                     <div class="col l6 s10">
@@ -111,6 +180,8 @@
                                 <br />
                                 <img src = "Resources/Images/Stack/cpp-logo.png" class="logo tooltipped" data-position="top" data-tooltip="C++" />
                                 <img src = "Resources/Images/Stack/opengl.jfif" class="logo tooltipped" data-position="top" data-tooltip="OpenGL" />
+                                <img src = "Resources/Images/Stack/git.png" class="logo tooltipped" data-position="top" data-tooltip="Git" />
+
                                 <br /> <br /> <br />
                                 <div class ="row">
                                     <a class="waves-effect waves-light btn blue col s4" href="https://github.com/crespoter/Crespoter-Graphics-Engine" target="_blank"><i class="material-icons left">code</i>Source Code</a>
@@ -118,26 +189,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col l6  s10">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="Resources/Images/Projects/serve-em.jpeg" ">
-                            </div>
-                            <div class="card-content white-text">
-                                <span class="card-title black-text">Serve'Em</span>
-                                <br />
-                                <p class = "black-text">Serve'Em is a restaurant management game made using Unity3D.<br />
-                                    Source code is available at <a href = "https://github.com/crespoter/Serveem">Github</a>
-                                    <br /> <br />
-                                    Technologies Used:
-                                </p>
-                                <br />
-                                <img src = "Resources/Images/Stack/unity.png" class="logo tooltipped" data-position="top" data-tooltip="Unity3D" /> 
-                                <br /> <br />
-                                <a class="waves-effect waves-light btn blue" href="https://github.com/crespoter/Serveem" target="_blank"><i class="material-icons left">code</i>Source Code</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -302,7 +354,7 @@
         <footer class="page-footer grey darken-4" style="padding:0">
             <div class="footer-copyright">
               <div class="container">
-              © 2022 David Christie (Crespoter)
+              © 2024 David Christie (Crespoter)
               </div>
             </div>
         </footer>
