--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                     <ul id="nav-mobile" class="right">
-                        <li><i class="material-icons left">file_download</i><a target = "_blank" href = "Resources/Documents/David Resume 2022.pdf" class="right">Download Resume</a></li>
+                        <li><i class="material-icons left">file_download</i><a target = "_blank" href = "Resources/Documents/Davids_Resume_2024.pdf" class="right">Download Resume</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
-        <div id ="main-page" style="min-height: 100vh" class="section scrollspy">    
+        <div id ="main-page" style="min-height: 100vh;" class="section scrollspy">    
             <div class = "container">
                 <div class = "row">
                     <div class = "col s12">
@@ -337,7 +337,7 @@
                             <span class = "col s2"><a target="_blank" href = "https://github.com/crespoter" class="btn-floating btn-large waves-effect waves-light tooltipped" data-position="top" data-tooltip="Github: crespoter" style="background-color: white;"><i class="fab fa-github black-text"></i></a></span>
                         </div>
                         <div class = "row" style="margin-top: 10vh;">
-                            <a class = "btn waves-effect waves-light btn-large" style="margin-left: 35%" target = "_blank" href = "Resources/Documents/David Resume 2022.pdf"><i class="material-icons left">file_download</i>Download Resume</a>
+                            <a class = "btn waves-effect waves-light btn-large" style="margin-left: 35%" target = "_blank" href = "Resources/Documents/Davids_Resume_2024.pdf"><i class="material-icons left">file_download</i>Download Resume</a>
                         </div>
                     </div>
 
