--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </div>
                             <div class="card-content" style="border-left: 3px solid black">
                                 <span class="card-title black-text">Software Engineer</span>
-                                <p class = "black-text"><i class="material-icons tiny black-text">date_range</i> June 2021 - Present<p>
+                                <p class = "black-text"><i class="material-icons tiny black-text">date_range</i> June 2021 - January 2024<p>
                                 <p class = "black-text"><i class="material-icons tiny black-text">location_on</i> Hyderabad, India</p>
                                 <br />
                                 <p class = "black-text">Part of Industrial Toys Incubation team. Worked on Gameplay and AI Programming for multiple Incubation projects<br /><br />
